
<TableLayout
    android:version="1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dang_nhap"
        android:textSize="15pt"
        android:textColor="@color/black"/>

    <TableRow
            android:id="@+id/tableRow1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tai_khoan"/>

    <EditText
        android:id="@+id/txtTK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <TableRow
            android:id="@+id/tablerow2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mat_khau"/>

    <EditText
        android:id="@+id/txtMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:singleLine="true"></EditText>

    <TableRow
            android:id="@+id/tableRow3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TableRow>

    <CheckBox
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="48dp"
        android:text="@string/luu_dangnhap" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btnDangnhap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dang_nhap"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/btnDky"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="@string/dang_ky"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </TableLayout>

